# elysium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: refactor-safety-net.md  v0.3.0-onboarding-spec.md
docs/contracts/: README.md  plugin-index-meta.schema.json  plugin-index-notes.schema.json
mcp/: Cargo.toml
mcp/.opencode/tools/data/: tags.db
mcp/src/: lib.rs  main.rs
mcp/src/commands/: audit.rs  connect.rs  fix.rs  index.rs  init.rs  mod.rs  model.rs  related.rs  search.rs  semantic_search.rs  status.rs  tags.rs  validate.rs
mcp/src/core/: config.rs  frontmatter.rs  mod.rs  note.rs  paths.rs  schema.rs  wikilink.rs
mcp/src/mcp/: audit.rs  helpers.rs  mod.rs  params.rs  server.rs  types.rs
mcp/src/search/: bm25.rs  embedder.rs  embedding.rs  engine.rs  hybrid.rs  mod.rs  plugin_index.rs  vectordb.rs
mcp/src/tags/: database.rs  embedder.rs  extractor.rs  keyword.rs  matcher.rs  mod.rs  seeds.rs
npm/: package.json
npm/scripts/: install.js
plugin/: .gitignore  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
plugin/scripts/: smoke-index-export.ts
plugin/src/: main.ts
plugin/src/config/: ElysiumConfig.ts  ModelDownloader.ts  VaultScanner.ts
plugin/src/embedder/: ModelLoader.ts
plugin/src/indexer/: Indexer.ts  VaultWatcher.ts
plugin/src/migration/: MigrationEngine.ts
plugin/src/storage/: IndexedDbStorage.ts
plugin/src/ui/: RelatedNotesView.ts  SetupWizard.ts
plugin/wasm/: Cargo.toml
plugin/wasm/src/: lib.rs
plugin/wasm/src/hnsw/: mod.rs
plugin/wasm/src/model2vec/: mod.rs
scripts/: pre-commit  release.sh  setup-dev.sh
tests/fixtures/golden/: search_baselines.json
tests/fixtures/vault_small/: alpha.md  beta.md  gamma.md
