[package]
name = "elysium-mcp"
version = "2.0.0"
edition = "2021"
description = "MCP server for Obsidian-based Second Brain with AI-powered semantic search"
authors = ["junejae"]
license = "MIT"
repository = "https://github.com/junejae/elysium"
homepage = "https://github.com/junejae/elysium"
keywords = ["mcp", "obsidian", "semantic-search", "second-brain", "ai"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[lib]
name = "elysium_mcp"
path = "src/lib.rs"

[[bin]]
name = "elysium"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Regex
regex = "1.10"
lazy_static = "1.4"

# File system
walkdir = "2.5"
glob = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Unicode support
unicode-width = "0.2"

# Async runtime (for MCP server)
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "io-std"], optional = true }

# SQLite for vector storage and FTS
rusqlite = { version = "0.32", features = ["bundled"] }

# Model2Vec for semantic tag matching
model2vec = "0.2"

# Direct model access for keyword extraction
safetensors = "0.4"
tokenizers = "0.20"

# File watching
notify = { version = "6.1", optional = true }

# MCP Server
rmcp = { version = "0.12", features = ["server", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }

[features]
default = ["mcp"]
watch = ["notify"]
mcp = ["tokio", "rmcp", "schemars"]

[profile.release]
lto = true
codegen-units = 1
strip = true
