[package]
name = "elysium-wasm"
version = "0.1.0"
edition = "2021"
authors = ["junejae"]
description = "WASM core for Elysium Obsidian plugin - HTP embeddings and HNSW vector search"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
bincode = "1.3"

# Model2Vec support
safetensors = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"] }
ndarray = { version = "0.16", default-features = false }
half = { version = "2.4", features = ["num-traits"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
